--- a/client/src/layouts/CourseCatalogueHeader/CourseCatalogueHeader.module.css
+++ b/client/src/layouts/CourseCatalogueHeader/CourseCatalogueHeader.module.css
@@ -9,8 +9,11 @@
   background-color: transparent;
 }
 
-.wrapper > img {
+.logoContainer {
   margin-right: 100px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
 }
 
 .navLinks {
@@ -40,7 +43,7 @@
   align-items: center;
   justify-content: center;
   color: var(--primary-blue);
-  gap:6px;
+  gap: 6px;
 }
 
 .signin {
