--- a/client/src/layouts/Header/Header.module.css
+++ b/client/src/layouts/Header/Header.module.css
@@ -9,8 +9,12 @@
   background-color: transparent;
 }
 
-.wrapper > img {
+
+.logoContainer {
   margin-right: 100px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
 }
 
 .navLinks {
