--- a/client/src/App.css
+++ b/client/src/App.css
@@ -83,9 +83,10 @@ button {
 
 .language-btn-container {
   display: flex;
-  column-gap: 10px;
+  column-gap: 24px;
   height: 10px;
   padding: 10px;
+  margin-top: 12px;
 }
 
 .language-btn-container button {
