better styles for desc

--- a/client/src/pages/ClassShowCase/ClassShowCase.module.css
+++ b/client/src/pages/ClassShowCase/ClassShowCase.module.css
@@ -89,10 +89,9 @@
 }
 
 .descriptionText {
-  color: #333;
+  color: var(--grey-accent);
   line-height: 30px;
-  font-weight: bold;
-
+  font-size: 1.1rem;
 }
 
 .demoNotAvailable {
