--- a/client/src/pages/ClassInfo/ClassInfo.module.css
+++ b/client/src/pages/ClassInfo/ClassInfo.module.css
@@ -135,12 +135,17 @@
   border-radius: 8px;
   text-align: center;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04);
+  text-overflow: ellipsis;
 }
 
 .studentEmail {
-  font-size: 14px;
+  font-size: 12px;
   color: var(--grey-accent);
   font-weight: 600;
+  text-overflow: ellipsis;
+  display: block;
+  width: 100%;
+  overflow: hidden;
 }
 
 /* Video Player */
