--- a/client/src/pages/ForgotPassword/ForgotPassword.module.css
+++ b/client/src/pages/ForgotPassword/ForgotPassword.module.css
@@ -119,6 +119,7 @@
   color: var(--grey-accent);
   outline: none;
   transition: border-color 0.3s ease;
+  direction: ltr !important;
 }
 
 .otpInput:focus {
