--- a/client/src/pages/UserManagement/UserManagement.module.css
+++ b/client/src/pages/UserManagement/UserManagement.module.css
@@ -41,3 +41,11 @@
   color: var(--primary-blue);
   font-weight: 500;
 }
+
+.searchInput {
+  width: 300px;
+  padding: 12px 8px;
+  margin-bottom: 16px;
+  border-radius: 8px;
+  font-size: 1rem;
+}
